Fixed the max spacing on character page

--- a/ClientApp/src/style/6-pages/_character.scss
+++ b/ClientApp/src/style/6-pages/_character.scss
@@ -42,7 +42,7 @@
   section {
     padding-top: 250px;
     max-width: 1000px;
-    width: 100%;
+    width: 100vw;
     .combo {
       display: flex;
       border-bottom: 1px solid $grey;
